# Finances

./: README.md  pyproject.toml
data/raw/: .gitignore
dev/data_processing/: test_extract_pdf.ipynb
src/mon_projet.egg-info/: PKG-INFO  SOURCES.txt
