[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mon_projet"
version = "0.1.0"
description = "Projet POO"
requires-python = ">=3.11, <3.14"

dependencies = [
]

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["src"]